[package]
name = "espadrille"
description = "Write short, simple scripts using the power of the entire Python ecosystem."
version = "0.1.0"
authors = ["Leigh Brenecki <leigh@brenecki.id.au>"]
license = "MPL-2.0"
repository = "https://github.com/excitedleigh/espadrille"

[dependencies]
clap = "2.33.0"
rust-crypto = "0.2.36"
dirs = "2.0.2"