[package]
name = "espadrille"
description = "Write short, simple scripts using the power of the entire Python ecosystem."
version = "0.1.0"
authors = ["Leigh Brenecki <leigh@brenecki.id.au>"]
license = "MPL-2.0"
repository = "https://github.com/excitedleigh/espadrille"

[dependencies]
clap = "3.1.2"
rust-crypto = "0.2.36"
dirs = "3.0.2"